--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_DB_URL = mongodb+srv://codefreakroy:Apurv12345@cluster0.imhorgf.mongodb.net/test?retryWrites=true&w=majority
 MONGO_DB_URL_LOCAL = mongodb://localhost:27017/hotels
+JWT_SECRET = 13579
